# zen-signal

./: .gitignore  ARCHITECTURE.md  BUILDING_AND_RELEASES.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: build.ps1  build.sh
src/: app.rs  charts.rs  config.rs  connection.rs  device_scanner.rs  error.rs  main.rs  polar_data.rs  recorder.rs  sensor.rs  timeseries.rs  visualization.rs
src/ui/: mod.rs  styles.rs
