[package]
name = "zen-signal"
version = "0.1.0"
authors = ["John Jacquay <jjacquay712@gmail.com>"]
edition = "2021"


[dependencies]
arctic = "1.0.0"
gtk4 = "0.8.1"
tokio = "1.19.2"

[dependencies.plotters]
version = "0.3.5"
default_features = false
features = ["line_series"]

[dependencies.plotters-cairo]
version = "0.6.0"
