[package]
name = "zen-signal"
version = "0.1.0"
authors = ["John Jacquay <jjacquay712@gmail.com>"]
edition = "2021"


[dependencies]
arctic = "1.0.0"
btleplug = "0.9"
chrono = "0.4.37"
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.19.2", features = ["full"] }

[dependencies.plotters]
version = "0.3.5"
default_features = false
features = ["line_series"]

[dependencies.plotters-iced]
version = "0.11"
