[package]
name = "zen-signal"
version = "0.1.0"
authors = ["John Jacquay <jjacquay712@gmail.com>"]
edition = "2021"

# Windows-specific: Hide console window for GUI application
[[bin]]
name = "zen-signal"
path = "src/main.rs"

[profile.release]
strip = true
lto = true


[dependencies]
# arctic = "1.0.0"
arctic = { git = "https://github.com/jacquayj/arctic.git", branch = "main" }
btleplug = "0.9"
chrono = "0.4.37"
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"

[dependencies.plotters]
version = "0.3.5"
default_features = false
features = ["line_series"]

[dependencies.plotters-iced]
version = "0.11"
